Add promise rejection tracker support
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -619,6 +619,30 @@ typedef jerry_value_t (*jerry_vm_exec_stop_callback_t) (void *user_p);
 
 - [jerry_set_vm_exec_stop_callback](#jerry_set_vm_exec_stop_callback)
 
+## jerry_promise_rejection_tracker_t
+
+**Summary**
+
+The typical implementation of the function might try to notify developers of unhandled rejections.
+The callback is called in two scenarios:
+ - When a promise is rejected without any handlers
+ - When a handler is added to a rejected promise for the first time
+In these cases the callback is invoked with the following arguments:
+ - `promise`: rejected promise
+ - `reason`: reason of the rejection
+
+**Prototype**
+
+```c
+typedef void (*jerry_promise_rejection_tracker_t) (jerry_value_t promise, jerry_value_t reason);
+```
+
+*New in version [[NEXT_RELEASE]]*.
+
+**See also**
+
+- [jerry_set_promise_rejection_callback](#jerry_set_promise_rejection_callback)
+
 ## jerry_promise_state_t
 
 Enum which describes the state of a Promise.
@@ -7691,6 +7715,67 @@ main (void)
 - [jerry_parse](#jerry_parse)
 - [jerry_run](#jerry_run)
 - [jerry_vm_exec_stop_callback_t](#jerry_vm_exec_stop_callback_t)
+
+## jerry_set_promise_rejection_callback
+
+**Summary**
+
+Register a promise rejection tracker callback for the engine.
+
+**Prototype**
+
+```c
+void
+jerry_set_promise_rejection_callback (jerry_promise_rejection_tracker_t tracker_cb);
+```
+
+- `tracker_cb` - callback called whenever an unhandled promsie rejection happens (passing NULL disables this feature)
+
+*New in version [[NEXT_RELEASE]]*.
+
+**Example**
+
+[doctest]: # (test="link")
+
+```c
+#include <stdio.h>
+#include "jerryscript.h"
+
+static void
+promise_rejection_trackter (jerry_value_t promise,
+                            jerry_value_t reason)
+{
+  // Notify the host environment about uncaught promise rejection
+  jerry_value_t reason_to_string = jerry_value_to_string (reason);
+  jerry_size_t req_sz = jerry_get_utf8_string_size (reason_to_string);
+  jerry_char_t str_buf_p[req_sz + 1];
+
+  jerry_size_t bytes_copied = jerry_string_to_utf8_char_buffer (reason_to_string, str_buf_p, req_sz);
+  jerry_release_value (reason_to_string);
+  str_buf_p[req_sz] = '\0';
+
+  printf ("Uncaught (in promise) %s\n", str_buf_p);
+}
+
+int
+main (void)
+{
+  jerry_init (JERRY_INIT_EMPTY);
+  jerry_set_promise_rejection_callback (promise_rejection_trackter);
+
+  jerry_char_t src[] = "Promise.reject(42)";
+  jerry_value_t promise = jerry_eval (src, sizeof (src) - 1, JERRY_PARSE_NO_OPTS);
+  jerry_release_value (promise);
+  jerry_cleanup ();
+}
+```
+
+**See also**
+
+- [jerry_init](#jerry_init)
+- [jerry_cleanup](#jerry_cleanup)
+- [jerry_eval](#jerry_eval)
+- [jerry_promise_rejection_tracker_t](#jerry_promise_rejection_tracker_t)
 
 ## jerry_get_backtrace
 
