Implement Symbol.matchAll
The following methods were implemented:
- String.prototype.matchAll based on ECMA-262 v11, 21.1.3.12
- RegExp.prototype[@@matchAll] based on ECMA-262 v11, 21.2.5.8
- RegExp String Iterator Object based on 21.2.7

JerryScript-DCO-1.0-Signed-off-by: Adam Szilagyi aszilagy@inf.u-szeged.hu

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -181,6 +181,7 @@ Well-known symbols:
  - JERRY_SYMBOL_TO_PRIMITIVE - @@toPrimitive well-known symbol
  - JERRY_SYMBOL_TO_STRING_TAG - @@toStringTag well-known symbol
  - JERRY_SYMBOL_UNSCOPABLES - @@unscopables well-known symbol
+ - JERRY_SYMBOL_MATCH_ALL - @@matchAll well-known symbol
 
  *New in version [[NEXT_RELEASE]]*.
 
