Support BigInt64/BigUint64 typedarray creation from API
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -650,6 +650,8 @@ Possible values:
  - JERRY_TYPEDARRAY_INT32 - represents the Int32Array TypedArray
  - JERRY_TYPEDARRAY_FLOAT32 - represents the Float32Array TypedArray
  - JERRY_TYPEDARRAY_FLOAT64 - represents the Float64Array TypedArray
+ - JERRY_TYPEDARRAY_BIGINT64 - represents the BigInt64Array TypedArray
+ - JERRY_TYPEDARRAY_BIGUINT64 - represents the BigUint64Array TypedArray
  - JERRY_TYPEDARRAY_INVALID - represents an invalid TypedArray
 
 API functions can return the `JERRY_TYPEDARRAY_INVALID` value if the
